fixed navigation bar on smaller screens

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -12,51 +12,3 @@
 .progress-words{
     margin:0;
 }
-
-.progress .determinate{
-    background-color: #FF5722;
-}
-
-.progress{
-    background-color: #ffbba6;
-}
-
-span.badge.new{
-    background-color: #FF5722;
-}
-
-.progress-words{
-    color: #757575;
-}
-
-.collection a.collection-item{
-    color: #FF5722;
-}
-
-.dropdown-content li>a, .dropdown-content li>span {
-    color: #FF5722;
-}
-
-.btn:hover {
-    background-color: #FF5722;
-}
-
-.btn:focus {
-    background-color: #FF5722;
-}
-
-button:focus {
-    background-color: #FF5722;
-}
-
-.switch label input[type=checkbox]:checked+.lever:after{
-     background-color: #FF5722;
-}
-
-.btn, .btn-large {
-    background-color: #FF5722;
-}
-
-.switch label input[type=checkbox]:checked+.lever {
-    background-color: #ff8a50;
-}
